--- a/example/Gemfile
+++ b/example/Gemfile
@@ -3,6 +3,6 @@ source 'https://rubygems.org'
 gem 'vagrant'
 gem 'hiera'
 gem 'hiera-puppet'
-
+gem 'vagrant-hiera'
 gem 'vagrant-vbguest'
 gem 'vagrant-puppetconf'
